syntax = "proto3";

package antelope.blocktivity.v1;

import "google/protobuf/timestamp.proto";

message BlockStats {
  uint32 block_num = 1;                     // block number
  google.protobuf.Timestamp timestamp = 2;  // block creation timestamp (UTC)
  int64 trx_count = 3;                     // number of successfully executed transactions in this block
  int64 act_count = 4;                     // number of successfully executed actions in this block
  string chain = 5;                         // the blockchain we are running on
}

message HourlyStats {
  uint32 block_num = 1;                     // start block number of the accumulated interval
  google.protobuf.Timestamp timestamp = 2;  // block creation timestamp (UTC) of the start block
  int64 trx_count = 3;                      // number of successfully executed transactions in the interval
  int64 act_count = 4;                      // number of successfully executed actions in the interval
  string chain = 5;                         // the blockchain we are running on
}

message Stats {
  repeated HourlyStats stats = 1;
}